--- a/sass/base.scss
+++ b/sass/base.scss
@@ -29,6 +29,10 @@ body {
   background-color: $bg-color;
   font-family: $body-font;
   letter-spacing: 1px;
+
+  [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+    display: none !important;
+  }
 }
 
 .wittl-color {
@@ -177,14 +181,16 @@ body {
 .wittlist-right.pane {
   float: left;
   padding: 0 25px;
+  padding-bottom: 40px;
 }
 
 .wittlist-left.pane {
-  width: 65%;
+  width: 75%;
 }
 
 .wittlist-right.pane {
-  width: 35%;
+  width: 25%;
+  padding: 0 25px;
 }
 
 section.pane {
@@ -504,151 +510,249 @@ section.pane {
 
   .card-wrapper {
     float: left;
-    padding-top: 25px;
+    padding-top: 60px;
+    margin-top: 30px;
 
     .card {
+      position: relative;
+      float: left;
+      width: 100%;
       background-color: #FFFFFF;
+      border-radius: 4px;
       border: 1px solid #ededed;
       box-shadow: 2px 2px 5px rgba(34, 62, 85, 0.15);
 
-      .wittl-data {
-        height: 140px;
-        padding: 0;
-        margin: 0;
-
-        list-style-type: none;
-        border-left: 1px solid #ededed;
-        li {
-          height: 33.3%;
-          padding: 10px 10px 10px 50px;
-          font-size: 15px;
-          border-bottom: 1px solid #ededed;
-        }
-      }
-
       .pic {
         position: relative;
-        height: 140px;
+        padding: 0;
+        // height: 160px;
+
+        border-top-left-radius: 4px;
+        border-bottom-left-radius: 4px;
         overflow: hidden;
-        border-right: 1px solid #ededed;
 
-        a.favourite {
+        .favourite {
           position: absolute;
-          right: 0;
-          z-index: 5;
-          font-size: 20px;
-          padding-top: 5px;
-          padding-right: 10px;
-          color: #FFFFFF;
-
-          &:hover {
-            text-decoration: none;
-            color: darken(white, 10%);
-          }
         }
 
         img {
-          height: 100%;
-        }
-      }
-
-      .detail {
-        height: 80px;
-        padding: 5px 15px;
-
-        header {
-          border: none;
-          padding: 10px 3px 5px 0;
-
-          .title {
-            font-family: $heading-font;
-            font-weight: 700;
-            font-size: 14px;
-            letter-spacing: 1px;
-            text-transform: uppercase;
-            color: $heading-color;
-            transition: color 0.3s ease-out;
-            -webkit-transition: color 0.3s ease-out;
-
-            margin: 5px 0;
-          }
-
-          .wittl-meta-description {
-            font-family: $heading-font;
-            font-weight: 400;
-            font-size: 12px;
-            font-style: italic;
-            letter-spacing: 1px;
-            color: $subheading-color;
-            margin: 2px;
-          }
-        }
-
-        .user-metrics {
-          padding: 10px 0 5px 3px;
-
-          .key, .value {
-            padding: 4px 3px;
-          }
-
-          .key {
-            font-size: 14px;
-            color: $wittl-color;
-          }
-
-          .value {
-            line-height: 14px;
-            font-family: $heading-font;
-            font-weight: 300;
-            font-size: 1.1em;
-            letter-spacing: 0.8px;
-            text-transform: uppercase;
-            color: lighten($subheading-color, 10%);
-          }
-        }
-
-        .user-display-metrics {
           width: 100%;
-          padding: 5px 0;
-
-          td {
-            border: none;
-            padding: 1.5px 0;
-            font-size: 12px;
-            letter-spacing: 0.75px;
-          }
-
-          .key {
-            width: 65%;
-            text-transform: uppercase;
-            font-weight: 600;
-            color: lighten(#58555a, 10%);
-          }
-
-          .value {
-            width: 35%;
-            color: #9b9b9b;
-          }
         }
+      }
 
-        &:hover {
-          cursor: pointer;
+      .test {
+        position: absolute;
+        top: -55px;
+        left: 50%;
+        height: 110px;
+        width: 110px;
+        margin-left: -55px;
+        border-radius: 99em;
+        border: 4px solid white;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        overflow: hidden;
 
-          .title {
-            color: $wittl-color;
-            transition: color 0.3s ease-in;
-            -webkit-transition: color 0.3s ease-in;
+        .inner {
+          width: 100%;
+          height: 100%;
+          overflow: hidden;
+
+          img {
+            height: 100%;
           }
         }
       }
+
+      .details {
+        padding: 10px 30px;
+        padding-top: 70px;
+        //border-left: 4px solid #F1F1F1;
+
+        .title {
+          font-family: $heading-font;
+          font-weight: 700;
+          font-size: 1.1em;
+          text-transform: uppercase;
+          // color: #575757;
+          color: $wittl-color;
+
+          margin: 10px 0;
+        }
+
+        .wittl-meta-description {
+          font-size: 0.9em;
+          font-weight: 600;
+          font-style: italic;
+          color: #BBB;
+        }
+
+        .wittl-data {
+          float: left;
+          margin-left: -20px;
+          margin-right: -20px;
+
+          ul {
+            float: left;
+            width: 100%;
+            list-style-type: none;
+            padding-left: 10px;
+            padding-right: 15px;
+          }
+
+          li {
+            letter-spacing: normal;
+            font-size: 0.9em;
+            color: #787878;
+            padding: 5px 10px;
+          }
+        }
+      }
+
     }
+
+    // .card {
+    //   background-color: #FFFFFF;
+    //   border: 1px solid #ededed;
+    //   box-shadow: 2px 2px 5px rgba(34, 62, 85, 0.15);
+
+    //   .wittl-data {
+    //     height: 140px;
+    //     padding: 0;
+    //     margin: 0;
+
+    //     list-style-type: none;
+    //     border-left: 1px solid #ededed;
+    //     li {
+    //       height: 33.3%;
+    //       padding: 10px 10px 10px 50px;
+    //       font-size: 15px;
+    //       border-bottom: 1px solid #ededed;
+    //     }
+    //   }
+
+    //   .pic {
+    //     position: relative;
+    //     height: 140px;
+    //     overflow: hidden;
+    //     border-right: 1px solid #ededed;
+
+    //     a.favourite {
+    //       position: absolute;
+    //       right: 0;
+    //       z-index: 5;
+    //       font-size: 20px;
+    //       padding-top: 5px;
+    //       padding-right: 10px;
+    //       color: #FFFFFF;
+
+    //       &:hover {
+    //         text-decoration: none;
+    //         color: darken(white, 10%);
+    //       }
+    //     }
+
+    //     img {
+    //       height: 100%;
+    //     }
+    //   }
+
+    //   .detail {
+    //     height: 80px;
+    //     padding: 5px 15px;
+
+    //     header {
+    //       border: none;
+    //       padding: 10px 3px 5px 0;
+
+    //       .title {
+    //         font-family: $heading-font;
+    //         font-weight: 700;
+    //         font-size: 14px;
+    //         letter-spacing: 1px;
+    //         text-transform: uppercase;
+    //         color: $heading-color;
+    //         transition: color 0.3s ease-out;
+    //         -webkit-transition: color 0.3s ease-out;
+
+    //         margin: 5px 0;
+    //       }
+
+    //       .wittl-meta-description {
+    //         font-family: $heading-font;
+    //         font-weight: 400;
+    //         font-size: 12px;
+    //         font-style: italic;
+    //         letter-spacing: 1px;
+    //         color: $subheading-color;
+    //         margin: 2px;
+    //       }
+    //     }
+
+    //     .user-metrics {
+    //       padding: 10px 0 5px 3px;
+
+    //       .key, .value {
+    //         padding: 4px 3px;
+    //       }
+
+    //       .key {
+    //         font-size: 14px;
+    //         color: $wittl-color;
+    //       }
+
+    //       .value {
+    //         line-height: 14px;
+    //         font-family: $heading-font;
+    //         font-weight: 300;
+    //         font-size: 1.1em;
+    //         letter-spacing: 0.8px;
+    //         text-transform: uppercase;
+    //         color: lighten($subheading-color, 10%);
+    //       }
+    //     }
+
+    //     .user-display-metrics {
+    //       width: 100%;
+    //       padding: 5px 0;
+
+    //       td {
+    //         border: none;
+    //         padding: 1.5px 0;
+    //         font-size: 12px;
+    //         letter-spacing: 0.75px;
+    //       }
+
+    //       .key {
+    //         width: 65%;
+    //         text-transform: uppercase;
+    //         font-weight: 600;
+    //         color: lighten(#58555a, 10%);
+    //       }
+
+    //       .value {
+    //         width: 35%;
+    //         color: #9b9b9b;
+    //       }
+    //     }
+
+    //     &:hover {
+    //       cursor: pointer;
+
+    //       .title {
+    //         color: $wittl-color;
+    //         transition: color 0.3s ease-in;
+    //         -webkit-transition: color 0.3s ease-in;
+    //       }
+    //     }
+    //   }
+    // }
 
   }
 }
 
 body.modal-open {
   .wrapper {
-    -webkit-filter: grayscale(0.75);
+    -webkit-filter: grayscale(0.75); 
     filter: grayscale(0.75);
   }
 }
@@ -1277,7 +1381,7 @@ body.modal-open {
     }
 
     &.wittl-dragstart {
-      background-color: rgba(0,0,0,0.01);
+      background-color: rgba(0,0,0,0.05);
     }
 
     
@@ -1404,7 +1508,7 @@ body.modal-open {
 }
 
 .wittl-droppable {
-  background-color: #EEE;
+  background-color: #F7F7F7;
   border-radius: 3px;
-  border: 2px dashed #CCC;
+  border: 1px dashed #DDD;
 }
