--- a/web/templates/list/list.html
+++ b/web/templates/list/list.html
@@ -67,7 +67,7 @@
         </div>
     </form>
 
-    <ul class="wittlist-list row">
+    <ul class="wittlist-list row" ng-cloak>
 
         <li ng-repeat="list in lists" class="col-sm-6">
 
