--- a/sass/base.scss
+++ b/sass/base.scss
@@ -29,6 +29,7 @@ body {
   background-color: $bg-color;
   font-family: $body-font;
   letter-spacing: 1px;
+  color: #5A5A5A;
 
   [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
     display: none !important;
@@ -173,27 +174,46 @@ body {
 }
 
 .content {
-  padding-top: $header-height + 15;
+  padding-top: $header-height;
   overflow: auto;
+
+  .inner {
+    width: 100%;
+    max-width: 1200 - $sidebar-width;
+    margin: 0 auto;
+
+    &:before,
+    &:after {
+      content: " ";
+      display: table;
+    }
+
+    &:after {
+      clear: both;
+    }
+  }
 }
 
 .wittlist-left.pane,
 .wittlist-right.pane {
   float: left;
-  padding: 0 25px;
+  padding-left: 25px;
+  padding-right: 25px;
   padding-bottom: 40px;
 }
 
 .wittlist-left.pane {
-  width: 75%;
+  width: 60%;
 }
 
 .wittlist-right.pane {
-  width: 25%;
-  padding: 0 25px;
+  width: 40%;
+  padding-left: 60px;
+  padding-right: 60px;
 }
 
 section.pane {
+  padding-top: 30px; 
 
   header {
     padding: 10px 0;
@@ -206,7 +226,7 @@ section.pane {
       text-transform: uppercase;
       color: $wittl-color;
 
-      .browse {
+      .browse { 
         float: right;
         padding-right: 10px;
         padding-top: 8px;
@@ -224,6 +244,7 @@ section.pane {
           }
         }
       }
+
     }
   }
 }
@@ -278,6 +299,48 @@ section.pane {
 
 }
 
+
+.toolbar {
+  margin-left: -18px;
+  margin-right: -18px;
+  padding: 30px 18px;
+  background-color: #F7F7F7;
+  background: -moz-linear-gradient(top, #f7f7f7 0%, #f4f4f4 80%, #f2f2f2 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f7f7f7), color-stop(80%,#f4f4f4), color-stop(100%,#f2f2f2)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #f7f7f7 0%,#f4f4f4 80%,#f2f2f2 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, #f7f7f7 0%,#f2f2f2 80%,#f4f4f4 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, #f7f7f7 0%,#f2f2f2 80%,#f4f4f4 100%); /* IE10+ */
+  background: linear-gradient(to bottom, #f7f7f7 0%,#f2f2f2 80%,#f4f4f4 100%); /* W3C */
+  border-bottom: 1px solid #F2F2F2;
+  // box-shadow: 0 1px 2px rgba(0,0,0,0.1);
+  
+  margin-bottom: 30px; // dEBUG
+
+  .left, .right {
+    display: inline-block;
+    padding: 0 25px;
+  }
+
+  .left {
+    width: 60%;
+
+    h2 {
+      margin: 10px 0;
+      font-family: $body-font;
+      font-weight: 600;
+      font-size: 18px;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+      color: $wittl-color;
+    }
+  }
+
+  .right {
+    width: 40%;
+  }
+}
+
+
 .add-new-card {
   padding: 20px 0;
 }
@@ -299,28 +362,48 @@ section.pane {
 
   .card-wrapper {
     float: left;
-    margin-top: 30px;
+    margin-top: 20px;
     padding-left: 20px;
     padding-right: 20px;
 
     .card {
       position: relative;
+      display: table;
       float: left;
       width: 100%;
       background-color: #FFFFFF;
       border-radius: 4px;
       border: 1px solid #ededed;
-      box-shadow: 2px 2px 5px rgba(34, 62, 85, 0.15);
+      box-shadow: 2px 2px 4px rgba(34, 62, 85, 0.15);
 
       .pic {
         position: relative;
+        width: 32%;
+        display: table-cell;
         padding: 0;
+       // border-right: 1px solid #EEE;
 
-        height: 120px;
+        background-position: center bottom;
+        background-size: 115% auto;
+        background-repeat: no-repeat;
 
+        // border-top: 4px solid $wittl-color;
+        // border: 6px solid #F9F9F9;
         border-top-left-radius: 4px;
-        border-top-right-radius: 4px;
+        border-bottom-left-radius: 4px;
         overflow: hidden;
+
+        box-shadow: 0 0 100px rgba(0,0,0,0.7) inset;
+
+        .overlay {
+          position: absolute;
+          bottom: 0;
+          height: 25%;
+          width: 100%;
+          background-color: transparent;
+          background-image: -webkit-linear-gradient(transparent, rgba(0,0,0,0.8));
+          background-image: linear-gradient(transparent, rgba(0,0,0,0.8));
+        }
 
         .favourite {
           position: absolute;
@@ -342,14 +425,18 @@ section.pane {
       }
 
       .details {
+        width: 30%;
+        display: table-cell;
+        vertical-align: top;
         padding: 10px 25px;
         border-top: 4px solid $wittl-color;
 
         .title {
           font-family: $heading-font;
           font-weight: 700;
-          font-size: 1.1em;
+          font-size: 1em;
           text-transform: uppercase;
+          line-height: 1.3em;
           // color: #575757;
           color: $wittl-color;
 
@@ -362,18 +449,21 @@ section.pane {
           font-style: italic;
           color: #BBB;
         }
+      }
 
-        .wittl-data {
-          float: left;
-          margin-left: -20px;
-          margin-right: -20px;
+      .wittl-data {
+          display: table-cell;
+          width: 38%;
+          border-top: 4px solid $wittl-color;
+          padding: 15px;
+          // margin-left: -20px;
+          // margin-right: -20px;
 
           ul {
             float: left;
             width: 100%;
             list-style-type: none;
-            padding-left: 10px;
-            padding-right: 15px;
+            padding-left: 0;
           }
 
           li {
@@ -383,7 +473,6 @@ section.pane {
             padding: 5px 10px;
           }
         }
-      }
 
     }
 
@@ -986,15 +1075,71 @@ body.modal-open {
   float: left;
   padding-bottom: 100px;
   opacity: 1;
+  padding: 25px 30px;
+  border-radius: 4px;
+  background-color: #F9F9F9;
 
   &.loading {
     opacity: 0;
   }
 
+  .instruction {
+    margin-bottom: 10px;
+    letter-spacing: 0.8px;
+    font-size: 0.9em;
+    color: darken($subheading-color, 10%);
+  }
+
+  .intro {
+    margin-bottom: 0;
+  }
+
   .wittl-clause {
-    margin: 5px 0;
+    margin: 5px -10px;
     padding: 5px 10px;
     border-radius: 3px;
+    display: inline-block;
+
+    &:after {
+      font-family: 'ElegantIcons';
+      speak: none;
+      font-style: normal;
+      font-weight: normal;
+      font-variant: normal;
+      text-transform: none;
+      line-height: 1;
+      -webkit-font-smoothing: antialiased;
+      color: lighten($heading-color, 15%);
+      content: "";
+      opacity: 0;
+    }
+
+    &:hover {
+      cursor: move;
+      background-color: rgba(0, 0, 0, 0.02);
+      border: 1px dashed rgba(0,0,0,0.1);
+
+      &:after {
+        content: "\31";
+        opacity: 1;
+        -webkit-transition: opacity 0.5s ease-in;
+      }
+    } 
+
+    .wittl-conjunction { 
+      display: inline-block;
+      padding-right: 5px;
+      color: #999;
+      font-size: 1em;
+    }
+
+    &> .wittl-conjunction,
+    &> .wrap-dd-select,
+    &> .preposition,
+    &> .param-field {
+      margin-bottom: 5px;
+    }
+
 
     // HACK
     &:first-child {
@@ -1004,18 +1149,24 @@ body.modal-open {
         visibility: hidden;
       }
     }
-
+ 
     &:last-child {
 
       .wittl-conjunction {
         color: #CCC;
       }
+ 
+      .selected {
+        color: #CCC;
+      }
 
-      .wittl {
-        border-bottom-color: #CCC;
+      &:hover {
+        cursor: default;
+        background: none;
+        border: none;
 
-        .selected {
-          color: #CCC;
+        &:after {
+          content: "";
         }
       }
     }
@@ -1024,127 +1175,110 @@ body.modal-open {
       background-color: rgba(0,0,0,0.05);
     }
 
-    
-    .wittl {
-      display: inline-block;
+    .selected {
+      color: $wittl-color;
 
       &:hover {
-        cursor: move;
+        color: lighten($wittl-color, 5%);
+        text-decoration: none;
       }
+    }
 
-      .selected {
-        color: $wittl-color;
+    .wrap-dd-select {
+      display: inline-block;
+      position: relative;
+      border-bottom: 1px dashed $wittl-color;
+      line-height: inherit;
+      color: #CCC;
+      cursor: pointer;
+      border-bottom: 1px dashed #CCC;
 
-        &:hover {
-          color: lighten(#CCC, 10%);
-          text-decoration: none;
+      .dropdown {
+        position: absolute;
+        display: none;
+        visibility: hidden;
+        background: $wittl-color;
+        border-radius: 3px;
+        right: 0;
+        top: 50%;
+        font-size: 90%;
+        opacity: 0;
+        -webkit-transform: translateY(-40%) scale(0.9);
+        -moz-transform: translateY(-40%) scale(0.9);
+        transform: translateY(-40%) scale(0.9);
+        -webkit-transition: visibility 0s 0.3s, opacity 0.3s, -webkit-transform 0.3s;
+        -moz-transition: visibility 0s 0.3s, opacity 0.3s, -moz-transform 0.3s;
+        transition: visibility 0s 0.3s, opacity 0.3s, transform 0.3s;
+
+
+        li {
+          color: #fff;
+          position: relative;
+          font-size: 90%;
+          padding: 1em 2em;
+          cursor: pointer;
+          white-space: nowrap;
+
+          &:hover {
+            background: rgba(0,0,0,0.05);
+          }
+
+          &.checked:before {
+            font-family: 'ElegantIcons';
+            color: #FFF;
+            speak: none;
+            font-style: normal;
+            font-weight: normal; 
+            font-variant: normal;
+            text-transform: none;
+            -webkit-font-smoothing: antialiased;
+            content: "\4e";
+            position: absolute;
+            right: 1em;
+            font-size: 80%;
+            line-height: 2;
+          }
+
+          a {
+            color: #FFF;
+            text-decoration: none;
+          }
+
         }
       }
 
-      .wrap-dd-select {
-        display: inline-block;
-        position: relative;
-        border-bottom: 1px dashed $wittl-color;
-        line-height: inherit;
-        display: inline-block;
-        color: #CCC;
-        cursor: pointer;
-        border-bottom: 1px dashed #CCC;
+      &.active {
 
         .dropdown {
-          position: absolute;
-          display: none;
-          visibility: hidden;
-          background: $wittl-color;
-          border-radius: 3px;
-          right: 0;
-          top: 50%;
-          font-size: 90%;
-          opacity: 0;
-          -webkit-transform: translateY(-40%) scale(0.9);
-          -moz-transform: translateY(-40%) scale(0.9);
-          transform: translateY(-40%) scale(0.9);
-          -webkit-transition: visibility 0s 0.3s, opacity 0.3s, -webkit-transform 0.3s;
-          -moz-transition: visibility 0s 0.3s, opacity 0.3s, -moz-transform 0.3s;
-          transition: visibility 0s 0.3s, opacity 0.3s, transform 0.3s;
-
-
-          li {
-            color: #fff;
-            position: relative;
-            font-size: 90%;
-            padding: 1em 2em;
-            cursor: pointer;
-            white-space: nowrap;
-
-            &:hover {
-              background: rgba(0,0,0,0.05);
-            }
-
-            &.checked:before {
-              font-family: 'ElegantIcons';
-              color: #FFF;
-              speak: none;
-              font-style: normal;
-              font-weight: normal; 
-              font-variant: normal;
-              text-transform: none;
-              -webkit-font-smoothing: antialiased;
-              content: "\4e";
-              position: absolute;
-              right: 1em;
-              font-size: 80%;
-              line-height: 2;
-            }
-
-            a {
-              color: #FFF;
-              text-decoration: none;
-            }
-
-          }
-        }
-
-        &.active {
-
-          .dropdown {
-            z-index: 10000;
-            display: block;
-            visibility: visible;
-            opacity: 1;
-            -webkit-transform: translateY(-50%) scale(1);
-            -moz-transform: translateY(-50%) scale(1);
-            transform: translateY(-50%) scale(1);
-            -webkit-transition: visibility 0s 0s, opacity 0.3s, -webkit-transform 0.3s;
-            -moz-transition: visibility 0s 0s, opacity 0.3s, -moz-transform 0.3s;
-            transition: visibility 0s 0s, opacity 0.3s, transform 0.3s;
-          }
+          z-index: 10000;
+          display: block;
+          visibility: visible;
+          opacity: 1;
+          -webkit-transform: translateY(-50%) scale(1);
+          -moz-transform: translateY(-50%) scale(1);
+          transform: translateY(-50%) scale(1);
+          -webkit-transition: visibility 0s 0s, opacity 0.3s, -webkit-transform 0.3s;
+          -moz-transition: visibility 0s 0s, opacity 0.3s, -moz-transform 0.3s;
+          transition: visibility 0s 0s, opacity 0.3s, transform 0.3s;
         }
       }
-
-      .param-field {
-        cursor: text;
-
-        &::-webkit-input-placeholder,
-        &::-moz-placeholder,
-        &:-moz-placeholder,
-        &:-ms-input-placeholder {
-          color: red;
-        }
-
-        &.loading {
-          opacity: 0;
-        }
-      }
-
     }
-  }
 
-  .wittl-conjunction {
-    padding: 5px 0;
-    padding-bottom: 15px;
-    color: #616161;
-    font-size: 1em;
+    .param-field {
+      cursor: text;
+      color: #3C454D;
+
+      &::-webkit-input-placeholder,
+      &::-moz-placeholder,
+      &:-moz-placeholder,
+      &:-ms-input-placeholder {
+        color: red;
+      }
+
+      &.loading {
+        opacity: 0;
+      }
+    }
   }
 }
 
