--- a/web/templates/list/view.html
+++ b/web/templates/list/view.html
@@ -108,12 +108,9 @@
 {% endblock %}
 
 {% block content %}
-    <header class="toolbar">
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    </header>
+<!--     <header class="toolbar">
+        
+    </header> -->
 
     <section class="wittlist-left pane" ng-controller="ListItemsCtrl">
         <header>
@@ -139,11 +136,13 @@
 
         <!-- Wittlist -->
         <div class="wittlist row" isotope-container="isotope-container"
-             iso-options="{transitionDuration: '0.65s'}" ng-cloak>
+             iso-options="{layoutMode: 'vertical', transitionDuration: '0.65s'}" ng-cloak>
             <div class="col-sm-12 card-wrapper" ng-repeat="item in items track by item.id" isotope-item="isotope-item">
                 
                 <div class="card" data-id="[[item.id]]" ng-click="showModal(item)">
-                    <div class="pic">
+                   
+                    <div class="pic" style="background-image: url('[[ item.card_image ]]')">
+                        <!-- <div class="overlay"></div> -->
                         <a class="favourite pull-right" ng-click="toggleFavourite($event, item)"
                            ng-if="item.favourited" href="#"><i
                                 class="icon_star"></i></a>
@@ -151,20 +150,21 @@
                            ng-if="!item.favourited" href="#"><i
                                 class="icon_star_alt"></i></a>
 
-                        <img ng-src="[[ item.card_image ]]" title="[[ item.name ]]" alt="[[ item.name ]]" />
+                        <!-- <img ng-src="" title="[[ item.name ]]" alt="[[ item.name ]]" /> -->
                     </div>
-                   
+
                     <div class="details">
-                        <h3 class="title"> [[ item.name | truncate: 15 ]]</h3>
+                        <h3 class="title"> [[ item.name | truncate: 35 ]]</h3>
 
                         <p class="wittl-meta-description">[[ item.attributes.subtitle | truncate: 30 ]]</p>
-                        <div class="wittl-data">   
-                            <ul>
-                                <li ng-bind-html="item.summary[0] | unsafe"></li>
-                                <li ng-bind-html="item.summary[1] | unsafe"></li>
-                                <li ng-bind-html="item.summary[2] | unsafe"></li>
-                            </ul>
-                        </div>
+                    </div>
+                    
+                    <div class="wittl-data">   
+                        <ul>
+                            <li ng-bind-html="item.summary[0] | unsafe"></li>
+                            <li ng-bind-html="item.summary[1] | unsafe"></li>
+                            <li ng-bind-html="item.summary[2] | unsafe"></li>
+                        </ul>
                     </div>
 
                 </div>
@@ -178,23 +178,26 @@
 
     <section ng-controller="WittlsCtrl" class="wittlist-right pane">
         <header>
-            <h2>Wittl By
-                <!-- <small class="browse"><a href="#" data-toggle="modal" data-target="#browse-wittls">Browse...</a></small> -->
-            </h2>
+            <h2>Wittl By</h2>
         </header>
 
         <div class="wittl-wrapper">
             <form class="nl-form wittl-form">
+                <p class="instruction">Drag and drop each <strong class="wittl-color">wittl</strong> to let us know what's most important to you.<br /><strong><em>The higher up it is, the more important!</em></strong></p>
                 <input type="hidden" ng-model="listId" value="{{ list.id }}" ng-init="listID={{ list.id }}" />
-                <ul class="wittls" ui-sortable="sortableWittlsOptions" ng-model="clauses">
+
+                <hr />
+
+                <p class="intro">I want to wittl by</p>
+                <ul class="wittls" ui-sortable="sortableWittlsOptions" ng-model="clauses" ng-cloak>
                     <li class="wittl-clause" ng-repeat="clause in clauses">
+                        <!-- <div class="wittl"> -->
                         <div class="wittl-conjunction">
                             and 
                         </div>
-                        <div class="wittl">
                             <div dropdown-select="wittlOptions" dropdown-model="clause" dropdown-onchange="addNewWittl(selected)"></div>
                             <wittl-params wittl="clause"></wittl-params>
-                        </div>
+                        <!-- </div> -->
                     </li>
                 </ul>
                 <div class="nl-overlay"></div>
