Changed the intro text
Removed the Lorem Ipsum and changed it to some useful text.

--- a/web/templates/list/list.html
+++ b/web/templates/list/list.html
@@ -46,9 +46,13 @@
                 <hr/>
 
                 <p class="joined">Wittler since {{ user.date_joined | date:"F j, Y"}}.</p>
-                <p class="other">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-                    has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
-                    galley of type and scrambled it to make a type specimen book.</p>
+                <p class="other">
+                    Wittlists are collections of items you want to compare. 
+                    In each Wittlist you can create <strong>Wittls</strong> to compare the different items.
+                </p>
+                <p class="other">
+                    You might want to create a list of holiday locations or a collection of potential jobs.
+                </p>
             </div>
 
         </div>
