--- a/sass/base.scss
+++ b/sass/base.scss
@@ -1106,6 +1106,75 @@ body.modal-open {
     opacity: 0;
   }
 
+  .delete {
+    margin: 0;
+    padding: 0;
+    color: lighten($subheading-color, 10%);
+    float: left;
+    width: 100%;
+    text-align: center;
+    background-color: rgba(0,0,0,0.025);
+    border-radius: 4px;
+    border: 1px dashed rgba(0,0,0,0.075);
+
+    //display: none;
+    height: 0;
+    opacity: 0;
+    -webkit-transition: opacity 0.5s ease-out 0.2s, 
+                        height 0.5s ease-out,
+                        padding 0.5s ease-out,
+                        margin 0.5s ease-out;
+    transition: opacity 0.5s ease-out 0.2s, 
+                        height 0.5s ease-out,
+                        padding 0.5s ease-out,
+                        margin 0.5s ease-out;
+
+    p {
+      opacity: 0;
+      margin: 0;
+      color: #FF6F6F;
+      font-size: 0.9em;
+      text-transform: uppercase;
+
+      -webkit-transition: opacity 0.2s ease-out;
+      transition: opacity 0.2s ease-out;
+
+      i {
+        padding-right: 20px;
+        font-size: 0.9em;
+      }
+    }
+
+    &:hover {
+      text-decoration: none;
+    }
+  }
+
+  &.dragging {
+
+    .delete {
+      //display: block;
+      margin: 15px 0;
+      padding: 10px 20px;
+      height: auto;
+      opacity: 1;
+      -webkit-transition: opacity 0.5s ease-in 0.2s, 
+                        height 0.5s ease-in,
+                        padding 0.5s ease-in,
+                        margin 0.5s ease-in;
+      transition: opacity 0.5s ease-in, 
+                        height 0.5s ease-in,
+                        padding 0.5s ease-in,
+                        margin 0.5s ease-in;
+
+      p {
+        opacity: 1;
+        -webkit-transition: opacity 0.5s ease-in;
+        transition: opacity 0.5s ease-in;
+      }
+    }
+  }
+
   .instruction {
     margin-bottom: 10px;
     letter-spacing: 0.8px;
