--- a/web/templates/list/view.html
+++ b/web/templates/list/view.html
@@ -134,7 +134,7 @@
             </form>
         </div>
 
-        <div class="wittlist-empty" ng-if="items.length === 0">
+        <div class="wittlist-empty" ng-if="items == []" ng-cloak>
             <i class="illustration icon_documents_alt"></i>
             <h3 class="message">
                 Your wittlist is looking rather empty <span class="smiley">:(</span>
@@ -175,11 +175,12 @@
                     </div>
                     
                     <div class="wittl-data">   
-                        <ul>
+                        <ul ng-if="item.summary >= 0">
                             <li ng-bind-html="item.summary[0] | unsafe"></li>
                             <li ng-bind-html="item.summary[1] | unsafe"></li>
                             <li ng-bind-html="item.summary[2] | unsafe"></li>
                         </ul>
+                        <p class="empty" ng-if="item.summary == 0">No wittls selected yet</p>
                     </div>
 
                 </div>
