--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -72,7 +72,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="{% url 'settings' %}">
                         Settings
                     </a>
                 </li>
@@ -102,7 +102,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="{% url 'settings' %}">
                             <i class="icon_cogs"></i>
                         </a>
                     </li>
