--- a/web/templates/registration/login.html
+++ b/web/templates/registration/login.html
@@ -23,6 +23,11 @@
                 </div>
 
                 <input type="hidden" name="next" value="{{ next }}"/>
+                <p class="register">
+                    Haven't got an account yet? 
+                    <br />Not to worry! 
+                    <a class="register-link" href="{% url 'register' %}">Sign up here <strong>:)</strong></a>
+                </p>
             </form>
         </div>
     </div>
