Unf*cked the dropdown directive

--- a/sass/base.scss
+++ b/sass/base.scss
@@ -966,7 +966,7 @@ body.modal-open {
     &.signup {
 
       .login-error {
-        padding-top: 5px
+        padding-top: 5px;
         padding-bottom: 10px;
       }
 
