--- a/web/templates/list/list.html
+++ b/web/templates/list/list.html
@@ -82,6 +82,8 @@
                     <div class="cover">
                         <a href="#" ng-click="selectList(list.id)" class="add-item" data-toggle="modal"
                            data-target="#newItemModal"><i class="icon_plus"></i></a>
+                        <a href="#" ng-click="deleteList(list.id)" class="delete-list" data-toggle="modal"
+                           data-target="#newItemModal"><i class="icon_close"></i></a>
                         <a href="/list/[[ list.id ]]" class="cover-inner">
                             <img ng-src="[[ list.items[0].card_image | coverphoto ]]" title="[[ list.name ]]"
                                  alt="[[ list.name ]]"/>
@@ -114,6 +116,9 @@
 {% endblock %}
 
 {% block javascript %}
+
+    <script type="text/javascript" src="/static/web/js/vendor/nanobar.js"></script>
+
 
     <script src="/static/web/js/vendor/angular/angular.js"></script>
     <script src="/static/web/js/vendor/angular/angular-resource.js"></script>
